--- a/demo/src/main/resources/templates/adminHome.html
+++ b/demo/src/main/resources/templates/adminHome.html
@@ -52,8 +52,8 @@
 <div class="navbar">
     <a href="/resourcesLib">Source Databases</a>
     <a href="/adminBorrow">Borrows</a>
-    <a href="#settings">Settings</a>
-    <a href="#logout">Logout</a>
+    <a href="/test/search2">Edting Single PDF</a>
+    <a href="/banUser">Ban User</a>
 </div>
 
 <div class="container">
