修改下拉选框及在线浏览

--- a/demo/src/main/resources/templates/searchresults.html
+++ b/demo/src/main/resources/templates/searchresults.html
@@ -153,7 +153,7 @@
                 onclick="showEditModal(this)">edit</button>
       </td>
       <td>
-        <a th:if="${book.downloadLink != null && !book.downloadLink.isEmpty()}" th:href="@{/downloadFromList/{bookId}(bookId=${book.id})}">Download</a>
+        <a th:if="${book.downloadLink != null && !book.downloadLink.isEmpty()}" th:href="@{/downloadfiles/{bookId}(bookId=${book.id})}">Download</a>
         <span th:if="${book.downloadLink == null || book.downloadLink.isEmpty()}">Not available</span>
       </td>
       <td>
@@ -201,7 +201,7 @@
             <input type="hidden" id="editType" name="editType">
             <div class="form-group">
               <label for="editField">Value</label>
-              <input type="text" class="form-control" id="editField" name="editField">
+              <select class="form-control" id="editField" name="editField"></select>
             </div>
             <button type="submit" class="btn btn-primary">Save changes</button>
           </form>
@@ -224,7 +224,19 @@
 
       $('#editId').val(id);
       $('#editType').val(type);
-      $('#editField').val(value);
+
+      var select = $('#editField');
+      select.empty();  // Clear existing options
+
+      if (type === 'status') {
+        select.append('<option value="published">Published</option>');
+        select.append('<option value="hide">Hide</option>');
+      } else {
+        select.append('<option value="true">True</option>');
+        select.append('<option value="false">False</option>');
+      }
+
+      select.val(value);  // Set the current value
       $('#editModal').modal('show');
     }
   </script>
