--- a/demo/src/main/resources/templates/adminLogin.html
+++ b/demo/src/main/resources/templates/adminLogin.html
@@ -71,7 +71,7 @@
             const password = document.getElementById('login-password').value;
 
             // 发送登录请求到服务器
-            fetch(`http://localhost:8088/api/user/login`, {
+            fetch(`http://8.130.130.240:8088/api/user/login`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
