--- a/demo/src/main/resources/templates/fileList.html
+++ b/demo/src/main/resources/templates/fileList.html
@@ -237,7 +237,7 @@
         'Academic Journal': '../static/images/book.png',
     };
 
-    const API_BASE_URL = "localhost:8088";
+    const API_BASE_URL = "8.130.130.240:8088";
     let currentPage = 1;
     const pageSize = 5;
     let filters = {};
