--- a/demo/src/main/resources/templates/pdf.html
+++ b/demo/src/main/resources/templates/pdf.html
@@ -73,7 +73,7 @@
             throw new Error('File ID not provided');
         }
 
-        const API_BASE_URL = "localhost:8088";
+        const API_BASE_URL = "8.130.130.240:8088";
         const url = `http://${API_BASE_URL}/downloadfiles/${encodeURIComponent(fileId)}`;
 
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.worker.min.js';
