--- a/demo/src/main/resources/templates/userhome.html
+++ b/demo/src/main/resources/templates/userhome.html
@@ -105,7 +105,7 @@
         if (display == null) {
             window.location.href = `/pdf?fileId=${encodeURIComponent(bookId)}`;
         } else {
-            fetch(`http://localhost:8088/downloadfiles/${encodeURIComponent(bookId)}`, { responseType: 'blob' })
+            fetch(`http://8.130.130.240:8088/downloadfiles/${encodeURIComponent(bookId)}`, { responseType: 'blob' })
                 .then(response => {
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
